--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -140,8 +140,8 @@
                   <span class="text-gray-700">Diamètre: <%= @item.diameter / 10 %> cm</span>
                 <% end %>
               </div>
-              <div class="w-3/5 -mt-8 md:w-4/5">
-                <svg class="w-28 h-28 text-japonica-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+              <div class="w-3/5 -mt-8 md:w-4/5 md:-mt-16 lg:-mt-24">
+                <svg class="w-28 h-28 lg:w-40 lg:h-40 text-japonica-500 opacity-70" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd" />
                 </svg>
               </div>
