--- a/app/views/adresses/edit.html.erb
+++ b/app/views/adresses/edit.html.erb
@@ -11,7 +11,7 @@
 
 <div class="pt-6 px-4">
   <h1 class="px-6 text-center text-3xl font-medium">Adresse de livraison</h1>
-  <div class="py-8 text-center">
+  <div class="py-8 text-center max-w-xs mx-auto">
     <%= simple_form_for [current_user, @adress] do |f| %>
       <div class="space-y-3">
 
