--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,25 +24,25 @@
 
 
 
-    <h1 class="px-8 pt-4 text-center text-2xl font-medium">Je crée mon compte</h1>
+    <h1 class="px-8 pt-5 text-center text-2xl text-gray-800 font-bold">Je crée mon compte</h1>
 
-    <div class="py-6 text-center max-w-xs mx-auto">
+    <div class="py-12 max-w-xs mx-auto">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
 
-        <div class="space-y-4">
+        <div class="space-y-3">
 
           <%= f.input :first_name,
                         required: false,
                         label: false,
                         placeholder: 'Prénom*',
-                        input_html: { class: " text-sm text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: " text-sm text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <%= f.input :last_name,
                         required: false,
                         label: false,
                         placeholder: 'Nom*',
-                        input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <%= f.input :email,
                         required: false,
@@ -50,21 +50,21 @@
                         input_html: { autocomplete: "email" },
                         label: false,
                         placeholder: 'Email*',
-                        input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <%= f.input :password,
                         required: false,
                         input_html: { autocomplete: "current-password" },
                         label: false,
                         placeholder: 'Mot de passe*',
-                        input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <%= f.input :password_confirmation,
                         required: true,
                         input_html: { autocomplete: "new-password" },
                         placeholder: 'Mot de passe confirmation*',
                         label: false,
-                        input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
 
           <div class="pt-2 flex items-center">
             <div class="mr-5 bg-gray-100 rounded-full h-12 overflow-hidden">
@@ -81,14 +81,14 @@
         </div>
 
         <div class="form-actions pt-6">
-          <%= f.button :submit, "Valider", class:"w-full py-4 rounded-xl bg-black text-white font-bold text-lg" %>
+          <%= f.button :submit, "Valider", class:"w-full py-4 rounded-xl bg-gray-900 text-white font-bold text-lg" %>
         </div>
 
       <% end %>
       <%#= render "devise/shared/links" %>
       <div class="flex justify-between items-center">
         <svg class="w-24 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
-        <span class="text-sm text-center">Déjà inscris ?</span>
+        <span class="text-sm text-center text-gray-700">Déjà inscris ?</span>
         <svg class="w-24 h-16" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89 1"><path stroke="#A09F9F" d="M0 .5h89"/></svg>
       </div>
       <div class="flex justify-center pb-12">
