--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -7,7 +7,9 @@
 <%# end %> -->
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Mot de passe oublié?", new_password_path(resource_name) %><br />
+  <div>
+    <%= link_to "Mot de passe oublié?", new_password_path(resource_name), class:"text-gray-600 text-right" %><br />
+  </div>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
