--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,26 +1,28 @@
-<div class="px-4 pt-8 max-w-7xl mx-auto lg:py-16">
-  <h2 class="font-bold text-gray-700 text-2xl text-center">Journal</h2>
-  <p class="pt-2 text-gray-500 text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa libero labore natus atque, ducimus sed.</p>
+<div class="px-4 pt-8 pb-24 max-w-xl mx-auto lg:max-w-7xl lg:py-16">
+  <h2 class="font-bold text-gray-700 text-3xl text-center">Journal</h2>
+  <p class="pt-2 text-gray-500 text-center max-w-md mx-auto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa libero labore natus atque, ducimus sed.</p>
 
-  <div class="pt-6 space-y-6 lg:grid lg:grid-cols-3 lg:gap-4 lg:space-y-0">
+  <div class="pt-6 space-y-6 lg:relative lg:grid lg:grid-cols-3 lg:gap-4 lg:space-y-0">
     <% @articles.each do |article| %>
-    <div class="bg-white rounded-xl overflow-hidden shadow-2xl">
-      <div class="relative" style="padding-bottom: 80%;">
+    <div class="bg-white rounded overflow-hidden shadow-2xl">
+      <!-- photo on mobile small fix for now need to create padding bottom for tailwind in config file -->
+      <div class="relative h-64 lg:h-80" style="padding-bottom: 80%;">
         <span> <%= cl_image_tag article.photo.key, class:'absolute h-full w-full inset-0 object-cover object-top shadow' %> </span>
       </div>
-      <div class="flex flex-col px-4 h-96">
+      <!-- photo on desktop -->
+      <div class="flex flex-col px-4 ">
         <div class="pt-2">
-          <span class="text-japonica-500 font-medium "> <%= article.category %> </span>
+          <span class="text-japonica-500 font-bold "> <%= article.category %> </span>
         </div>
         <div class="">
-          <span class="font-bold text-xl"><%= article.title %></span>
+          <span class="font-bold text-2xl text-gray-700 font-cursive"><%= article.title %></span>
         </div>
-        <div class="pt-4 flex-grow">
-          <span class="text-gray-500"><%= article.content %></span>
+        <div class="pt-4 lg:pb-14 ">
+          <span class="text-gray-600"><%= article.content %></span>
         </div>
-        <div class="pt-6 pb-2 flex space-x-2">
-          <span class="text-gray-600 font-thin text-sm"><%= (article.created_at).strftime("%b %d, %Y") %></span>
-          <span class="text-gray-600 font-thin text-sm">6 min de lecture</span>
+        <div class=" bottom-0 pt-6 pb-2 flex space-x-2 lg:absolute">
+          <span class="text-gray-500 font-thin text-sm"><%= (article.created_at).strftime("%b %d, %Y") %></span>
+          <span class="text-gray-500 font-thin text-sm">6 min de lecture</span>
         </div>
       </div>
     </div>
