--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -23,25 +23,9 @@
           </svg>
         </a>
 
-        <a href="#" class="text-gray-400 hover:text-gray-500">
-          <span class="sr-only">Twitter</span>
-          <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
-          </svg>
-        </a>
-
-        <a href="#" class="text-gray-400 hover:text-gray-500">
-          <span class="sr-only">GitHub</span>
-          <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-            <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
-          </svg>
-        </a>
-
-        <a href="#" class="text-gray-400 hover:text-gray-500">
-          <span class="sr-only">Dribbble</span>
-          <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-            <path fill-rule="evenodd" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10c5.51 0 10-4.48 10-10S17.51 2 12 2zm6.605 4.61a8.502 8.502 0 011.93 5.314c-.281-.054-3.101-.629-5.943-.271-.065-.141-.12-.293-.184-.445a25.416 25.416 0 00-.564-1.236c3.145-1.28 4.577-3.124 4.761-3.362zM12 3.475c2.17 0 4.154.813 5.662 2.148-.152.216-1.443 1.941-4.48 3.08-1.399-2.57-2.95-4.675-3.189-5A8.687 8.687 0 0112 3.475zm-3.633.803a53.896 53.896 0 013.167 4.935c-3.992 1.063-7.517 1.04-7.896 1.04a8.581 8.581 0 014.729-5.975zM3.453 12.01v-.26c.37.01 4.512.065 8.775-1.215.25.477.477.965.694 1.453-.109.033-.228.065-.336.098-4.404 1.42-6.747 5.303-6.942 5.629a8.522 8.522 0 01-2.19-5.705zM12 20.547a8.482 8.482 0 01-5.239-1.8c.152-.315 1.888-3.656 6.703-5.337.022-.01.033-.01.054-.022a35.318 35.318 0 011.823 6.475 8.4 8.4 0 01-3.341.684zm4.761-1.465c-.086-.52-.542-3.015-1.659-6.084 2.679-.423 5.022.271 5.314.369a8.468 8.468 0 01-3.655 5.715z" clip-rule="evenodd" />
-          </svg>
+        <a href="https://www.etsy.com/fr/shop/MabciaCeramic?ref=hpsh" class="text-gray-400 hover:text-gray-500">
+          <span class="sr-only">Etsy</span>
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="72.424 42.569 339.041 160.792"><path d="M108.783 100.639V55.192c0-1.684.168-2.694 3.031-2.694h38.545c6.734 0 10.437 5.724 13.131 16.496l2.188 8.586h6.564c1.177-24.406 2.186-35.011 2.186-35.011s-16.495 1.851-26.258 1.851H98.854l-26.431-.842v7.07l8.923 1.683c6.228 1.179 7.74 2.524 8.249 8.249 0 0 .506 16.832.506 44.607 0 27.771-.506 44.437-.506 44.437 0 5.049-2.021 6.9-8.249 8.082l-8.923 1.684v7.066l26.431-.84h44.101c9.931 0 32.991.84 32.991.84.503-6.061 3.872-33.498 4.377-36.524h-6.228l-6.565 14.981c-5.219 11.78-12.792 12.623-21.21 12.623h-25.082c-8.417 0-12.457-3.367-12.457-10.604v-38.379s18.347 0 24.742.506c4.714.338 7.574 1.684 9.091 8.248l2.021 8.753h7.234l-.503-22.053 1.009-22.217h-7.236l-2.355 9.762c-1.517 6.396-2.525 7.577-9.091 8.248-7.405.844-24.913.675-24.913.675v.167h.003v-.003zm99.816-40.733c-2.357 10.436-4.714 18.515-12.962 23.902-5.049 3.365-10.1 4.542-12.117 4.711v6.396h14.98v51.675c0 14.478 9.596 21.549 22.387 21.549 9.932 0 20.198-4.208 23.734-12.963l-3.536-4.545c-1.684 2.863-7.067 7.07-13.801 7.07-7.405 0-11.445-5.051-11.445-17.841V94.245l24.914 1.853 1.345-11.449-26.258 1.011V60.073l-7.241-.167zm53.192 79.484l-6.396.168c.336 3.702.506 8.417.506 12.793 0 4.545-.168 8.753-.506 10.772 0 0 12.793 4.709 25.754 4.709 17.506 0 31.478-8.416 31.478-24.912 0-28.275-42.418-24.066-42.418-43.09 0-7.91 7.069-10.941 14.812-10.941 6.06 0 11.109 2.188 12.119 5.389l4.209 12.624 6.229-.336c.506-6.734.841-14.477 1.852-20.704-5.388-2.357-16.667-3.706-23.731-3.706-16.5 0-29.795 7.239-29.795 23.399 0 28.109 41.406 22.386 41.406 43.093 0 7.403-4.547 12.622-14.812 12.622-9.424 0-14.139-4.88-15.987-9.764l-4.72-12.116zm101.453 19.446c-9.745 27.221-21.674 34.273-32.426 34.273-4.539 0-6.721-2.018-7.396-5.205l-2.52-13.109-7.058.336c-1.344 7.73-2.688 16.302-4.534 23.357 4.201 3.188 11.254 4.872 16.801 4.872 11.596 0 29.236-1.515 45.363-39.821l27.053-63.845c2.186-5.21 3.023-5.714 9.408-8.236l3.529-1.341v-5.881l-15.963.84-17.137-.84v5.881l4.366 1.341c4.367 1.347 6.387 3.026 6.387 6.051 0 1.511-.506 3.024-1.348 5.374-2.52 6.389-18.146 44.359-22.342 52.426l4.195-1.515c-7.394-18.313-18.646-48.895-20.328-54.099-.336-1.009-.504-1.849-.504-2.693 0-2.687 1.848-4.872 5.881-5.711l5.545-1.173v-5.881l-23.021.84-18.313-.84v5.881l3.025 1.007c4.2 1.344 5.209 2.521 7.729 8.401 13.941 31.925 20.498 49.396 29.399 72.249l4.209-12.939z"/></svg>
         </a>
       </div>
     </div>
@@ -53,27 +37,19 @@
           </h3>
           <ul class="mt-4 space-y-4">
             <li>
-              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                Contact
-              </a>
+              <%= link_to "Contact", new_contact_path, class:'text-base text-gray-500 hover:text-gray-900' %>
             </li>
 
             <li>
-              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                A propos
-              </a>
+              <%= link_to "A propos", about_path, class:'text-base text-gray-500 hover:text-gray-900' %>
             </li>
 
             <li>
-              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                Journal
-              </a>
+              <%= link_to "Journal", articles_path, class:'text-base text-gray-500 hover:text-gray-900' %>
             </li>
 
             <li>
-              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                Magasin
-              </a>
+              <%= link_to "Magasin", items_path, class:'text-base text-gray-500 hover:text-gray-900' %>
             </li>
           </ul>
         </div>
@@ -85,25 +61,19 @@
           </h3>
           <ul class="mt-4 space-y-4">
             <li>
-              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                Respect de la vie privée
-              </a>
+              <%= link_to "Respect de la vie privée", privacy_path, class:'text-base text-gray-500 hover:text-gray-900' %>
             </li>
 
             <li>
-              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                Conditions de ventes
-              </a>
+              <%= link_to "Conditions de ventes", terms_path, class:'text-base text-gray-500 hover:text-gray-900' %>
             </li>
 
             <li>
-              <button class="text-base text-gray-500 hover:text-gray-900" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférence de cookie</button>
+              <button class="text-base text-gray-500 hover:text-gray-900 focus:outline-none" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférence de cookie</button>
             </li>
 
             <li>
-              <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                Mentions légales
-              </a>
+              <%= link_to "Mentions légales", root_path, class:'text-base text-gray-500 hover:text-gray-900' %>
             </li>
 
           </ul>
