--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -88,7 +88,7 @@
         <% @items.first(6).each do |item| %>
           <%= link_to item_path(item), class:"" do %>
             <div class="relative pb-2 w-60 rounded-lg lg:w-full border-gray-200 border border-opacity-70 hover:shadow-3xl focus:outline-none">
-              <div class="relative h-64 lg:h-72 xl:h-60" style="padding-bottom: 80%">
+              <div class="relative h-64 lg:h-96" style="padding-bottom: 100%">
                 <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow', alt:'objet en céramique'  %>
               </div>
               <div>
