--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -91,7 +91,7 @@
           <span class="text-xs text-white tracking-wide bg-japonica-400 px-2 py-1 rounded-full font-bold">Livraison GRATUITE</span>
         </div>
         <div class="pt-2 text-gray-600">
-          <%= @item.description[0...197] %>
+          <%= @item.description %>
         </div>
         <% if @item.sold? %>
           <div class="pt-4">
@@ -139,18 +139,20 @@
 
             <div class="flex items-start space-x-2 md:space-x-0">
               <div class="w-2/3 flex flex-col">
-                <span class="py-4 text-gray-700 font-semibold">Dimension</span>
-                <% if @item.width %>
-                  <span class="text-gray-700">Largeur: <%= @item.width / 10 %> cm</span>
-                <% end %>
-                <% if @item.length %>
-                  <span class="text-gray-700">Longueur: <%= @item.length / 10 %> cm</span>
-                <% end %>
-                <% if @item.height %>
-                  <span class="text-gray-700">Hauteur: <%= @item.height / 10 %> cm</span>
-                <% end %>
-                <% if @item.diameter %>
-                  <span class="text-gray-700">Diamètre: <%= @item.diameter / 10 %> cm</span>
+                <% if @item.width || @item.length || @item.height || @item.diameter %>
+                  <span class="py-4 text-gray-700 font-semibold">Dimension</span>
+                  <% if @item.width %>
+                    <span class="text-gray-700">Largeur: <%= @item.width / 10 %> cm</span>
+                  <% end %>
+                  <% if @item.length %>
+                    <span class="text-gray-700">Longueur: <%= @item.length / 10 %> cm</span>
+                  <% end %>
+                  <% if @item.height %>
+                    <span class="text-gray-700">Hauteur: <%= @item.height / 10 %> cm</span>
+                  <% end %>
+                  <% if @item.diameter %>
+                    <span class="text-gray-700">Diamètre: <%= @item.diameter / 10 %> cm</span>
+                  <% end %>
                 <% end %>
               </div>
               <div class="w-3/5 -mt-8 md:w-4/5 md:-mt-16 lg:-mt-24">
@@ -163,7 +165,7 @@
             <div class="pt-6">
               <span class="font-semibold text-gray-700">Description</span>
               <div class="pt-4">
-                <span class="text-gray-600"><%= @item.description %></span>
+                <span class="text-gray-600"><%= @item.content %></span>
               </div>
             </div>
 
