--- a/app/views/shared/menu/_menu_before_login.html.erb
+++ b/app/views/shared/menu/_menu_before_login.html.erb
@@ -9,13 +9,13 @@
     <%# end %>
   </div> -->
   <div>
-    <%= link_to root_path, class:'px-2 mx-2 py-2 mt-1 text-lg flex items-center space-x-4 hover:bg-white rounded p' do %>
-      <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"/></svg>
-      <span class="font-semibold text-gray-600">Accueil</span>
-    <% end %>
-  </div>
+      <%= link_to root_path, class:'px-2 mx-2 py-2 mt-1 text-lg flex items-center space-x-4 hover:bg-white rounded' do %>
+        <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/></svg>
+        <span class="font-semibold text-gray-600">Accueil</span>
+      <% end %>
+    </div>
   <div>
-    <%= link_to items_path, class:"text-lg px-2 mx-2 py-2 flex items-center space-x-4 hover:bg-white rounded" do %>
+    <%= link_to items_path, class:"text-lg px-2 mx-2 py-2 mt-2 flex items-center space-x-4 hover:bg-white rounded" do %>
     <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"/></svg>
     <span class="font-semibold text-gray-700 ">Magasin</span>
     <% end %>
